# ni-rest

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yaml  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
api/core/: config_generator.py  ni_service.py
api/migrations/: 0001_initial.py  0002_networkimporterjob_celery_task_id_and_more.py
api/services/: config_generator.py  ni_service.py
cli/: __init__.py  main.py
config/: settings.py
docs/: 00-introduction.md  01-installation.md  02-quickstart.md  03-configuration.md  04-cli-usage.md  05-api-usage.md
ni_rest/: __init__.py  asgi.py  manage.py  settings.py  urls.py  wsgi.py
ni_rest/api/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
ni_rest/api/migrations/: 0001_initial.py  0002_remove_batfish_naming_fields.py
ni_rest/api/services/: config_generator.py  job_logger.py  ni_service.py
ni_rest/core/: asgi.py  celery.py  db_utils.py  middleware.py  settings.py  urls.py  wsgi.py
ni_rest/gui/: apps.py  forms.py  urls.py  views.py
ni_rest/static/css/: custom.css
ni_rest/static/js/: custom.js
ni_rest/templates/: base.html
ni_rest/templates/components/: navbar.html  sidebar.html
ni_rest/templates/gui/: execute_job.html  home.html  job_detail.html  job_list.html
ni_rest/templates/registration/: logged_out.html  login.html
