[project]
name = "network-importer-rest"
version = "0.0.3"
description = "A REST API wrapper around network-importer"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "André Lima", email = "andre@netcube.consulting"}
]

license = { text = "Apache-2.0" }

dependencies = [
    "django>=5.2.3",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "network-importer",
    "rich>=14.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "django-celery-results>=2.5.0",
    "drf-spectacular>=0.27.0",
]

[project.scripts]
ni-rest = "cli.main:app"  # CLI command stays the same

[tool.setuptools]
packages = ["ni_rest", "cli"]

[tool.uv.sources]
network-importer = { git = "https://github.com/theandrelima/network-importer.git", rev = "updating_dependencies" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"