[project]
name = "network-importer-rest"
version = "0.0.8"
description = "A REST API wrapper around network-importer"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "André Lima", email = "andre@netcube.consulting"}
]

license = { text = "Apache-2.0" }

dependencies = [
    "django>=5.2.3",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "network-importer",
    "rich>=14.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "django-celery-results>=2.5.0",
    "drf-spectacular>=0.27.0",
    "psutil>=5.9.0",
    "dj-database-url>=3.0.1"
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1"
]

[project.scripts]
ni-rest = "cli.main:main"  # Calling main() function instead of app directly

[tool.setuptools]
packages = {find = {}}

[tool.uv.sources]
network-importer = { git = "https://github.com/theandrelima/network-importer.git", rev = "updating_dependencies" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"